<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/Camer_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <EditText
            android:id="@+id/Camera_name_setup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/camera_link_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <EditText
            android:id="@+id/camera_link_settup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="@string/picture_link_address"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/camer_icon_setup_layout"
                android:layout_width="80dip"
                android:layout_height="80dip"
                android:layout_alignParentRight="true"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lbl_camera_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@+id/camer_icon_setup_layout"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="normal"
                android:typeface="sans"

                android:visibility="invisible" />

            <EditText
                android:id="@+id/picture_link_setup_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:textColor="#000000"
                android:textSize="19sp"
                android:textStyle="normal"
                android:typeface="sans" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <Button
                android:id="@+id/bt_load_icon_setup_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loadicon"
                android:textColor="#1E3C7d"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/bt_change_urk_setup_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera_changeurl"
                android:textColor="#1E3C7d"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"

                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>